--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Vikkstar & Afrojack Headline in Bucharest!</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">51 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Master Algo Trading: Automated Strategies & Backtesting Explained #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Your Life Can Be Super | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Your Life Is Now, with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -343,7 +343,7 @@
                     <div class="video-info">
                         <h3>Are You Ready for Presence? | Eckhart Tolle on the Paradox of Time (Part 2)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -354,7 +354,7 @@
                     <div class="video-info">
                         <h3>Is Attachment a Problem in Relationships? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -365,7 +365,7 @@
                     <div class="video-info">
                         <h3>Why the Stock Market Is Like a Lottery?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1786,7 +1786,7 @@
                     <div class="video-info">
                         <h3>How I went from 260 to 300 yd drives instantly - Do 2 KEYS!  #Golf #golfswing #golftips</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">2 weeks ago</div>
+                        <div class="date">3 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5085,7 +5085,7 @@
                         <div class="video-info">
                             <h3>Master Algo Trading: Automated Strategies & Backtesting Explained #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5162,7 +5162,7 @@
                         <div class="video-info">
                             <h3>Why the Stock Market Is Like a Lottery?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7253,7 +7253,7 @@
                         <div class="video-info">
                             <h3>Your Life Can Be Super | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7264,7 +7264,7 @@
                         <div class="video-info">
                             <h3>Your Life Is Now, with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7330,7 +7330,7 @@
                         <div class="video-info">
                             <h3>Are You Ready for Presence? | Eckhart Tolle on the Paradox of Time (Part 2)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7341,7 +7341,7 @@
                         <div class="video-info">
                             <h3>Is Attachment a Problem in Relationships? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9471,7 +9471,7 @@
                         <div class="video-info">
                             <h3>How I went from 260 to 300 yd drives instantly - Do 2 KEYS!  #Golf #golfswing #golftips</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">2 weeks ago</div>
+                            <div class="date">3 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -9576,7 +9576,7 @@
                         <div class="video-info">
                             <h3>Vikkstar & Afrojack Headline in Bucharest!</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">51 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
