--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Vikkstar & Afrojack Headline in Bucharest!</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Your Life Is Now, with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -728,7 +728,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on Reclaiming Awe and Wonder</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -739,7 +739,7 @@
                     <div class="video-info">
                         <h3>The far right will win if we remain divided</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2153,7 +2153,7 @@
                     <div class="video-info">
                         <h3>Tip. 7 How to put pizza on the peel</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">3 weeks ago</div>
+                        <div class="date">4 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5327,7 +5327,7 @@
                         <div class="video-info">
                             <h3>The far right will win if we remain divided</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7286,7 +7286,7 @@
                         <div class="video-info">
                             <h3>Your Life Is Now, with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -7506,7 +7506,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on Reclaiming Awe and Wonder</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9058,7 +9058,7 @@
                         <div class="video-info">
                             <h3>Tip. 7 How to put pizza on the peel</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">3 weeks ago</div>
+                            <div class="date">4 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -9576,7 +9576,7 @@
                         <div class="video-info">
                             <h3>Vikkstar & Afrojack Headline in Bucharest!</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
