--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Master Algo Trading: Automated Strategies & Backtesting Explained #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Your Life Can Be Super | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -310,7 +310,7 @@
                     <div class="video-info">
                         <h3>Sadhguru's Enlightenment Day Satsang – LIVE on 23 September | 7:30 PM IST | 10 AM EDT | 3 PM BST</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2142,7 +2142,7 @@
                     <div class="video-info">
                         <h3>Healthy Bagel Sandwich for Lunch ! 🤤 #food #recipe #baking #shorts</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">3 weeks ago</div>
+                        <div class="date">4 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5085,7 +5085,7 @@
                         <div class="video-info">
                             <h3>Master Algo Trading: Automated Strategies & Backtesting Explained #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7275,7 +7275,7 @@
                         <div class="video-info">
                             <h3>Your Life Can Be Super | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7330,7 +7330,7 @@
                         <div class="video-info">
                             <h3>Sadhguru's Enlightenment Day Satsang – LIVE on 23 September | 7:30 PM IST | 10 AM EDT | 3 PM BST</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9047,7 +9047,7 @@
                         <div class="video-info">
                             <h3>Healthy Bagel Sandwich for Lunch ! 🤤 #food #recipe #baking #shorts</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">3 weeks ago</div>
+                            <div class="date">4 weeks ago</div>
                         </div>
                     </a>
                 </div>
